# jolt_wallet

./: .bumpversion.cfg  .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  HISTORY.md  Jenkinsfile  Kconfig  LICENSE  Makefile  README.md  component.mk  export.sh  idf_ext.py  ota_compress.py  partitions.csv  requirements.txt  run-clang-format.sh  sdkconfig.defaults  upload_firmware.py
.cfg/: cppcheck-suppressions.txt
3dprint_case/: Body.STL  back.STL
components/cryptoauthlib/: CMakeLists.txt  component.mk
docs/: README.md  build-linux.md  build-osx.md  build-windows.md  faq.md  howto-dev-board.md  roadmap.md
elf2jelf/: .gitignore  README.md  common_structs.py  elf2jelf.py  elf32_structs.py  export_list.txt  jelf_loader.c  jelf_loader.pyx  jelf_structs.py  miniz.h  (+5 more)
jolt_os/: CMakeLists.txt  Kconfig  component.mk  console.c  console.h  jolt_globals.h  jolt_helpers.c  jolt_helpers.h  jolt_lib.c  jolt_lib.h  json_config.c  json_config.h  lv_conf.h  main.c  mp.h  vault.c  vault.h
jolt_os/app_cmd/: contacts.c  contacts.h
jolt_os/crypto/: crypto.c  crypto_internal.h  crypto_registry.c  jolt_crypto.h
jolt_os/crypto/algorithms/: ecdsa_secp256k1.c  ecdsa_secp256k1.h  ed25519.c  ed25519.h
jolt_os/hal/: display.c  display.h  hw_monitor.c  hw_monitor.h  i2c.c  i2c.h  led.c  led.h  lv_drv_conf.h
jolt_os/hal/radio/: README.md  bluetooth.c  bluetooth.h  bluetooth_cfg.c  bluetooth_cfg.h  bluetooth_gatts_profile_a.c  bluetooth_gatts_profile_a.h  bluetooth_state.c  bluetooth_state.h  radio.c  radio.h  spp_recv_buf.c  spp_recv_buf.h  wifi.c  wifi.h
jolt_os/hal/storage/: storage.c  storage.h  storage_ataes132a.c  storage_ataes132a.h  storage_atecc608a.c  storage_atecc608a.h  storage_internal.c  storage_internal.h
jolt_os/hal/storage/aes132_library/: aes132_cmd.c  aes132_cmd.h  aes132_comm.c  aes132_comm.h  aes132_comm_marshaling.c  aes132_comm_marshaling.h  aes132_conf.c  aes132_conf.h  aes132_i2c.c  aes132_i2c.h  aes132_jolt.c  aes132_jolt.h  aes132_mac.c  aes132_mac.h  i2c_phys.c  i2c_phys.h
jolt_os/hal/storage/atca/: atecc608a.c  atecc608a.h
jolt_os/hash/: README.md  hash.c  hash_internal.h  hash_registry.c  jolt_hash.h
jolt_os/hash/algorithms/: blake2b.c  blake2b.h  ripemd160.c  ripemd160.h  sha256.c  sha256.h  sha512.c  sha512.h
jolt_os/jelf_loader/include/: jelfloader.h
jolt_os/jelf_loader/src/: jelf.h  loader.c  unaligned.c  unaligned.c.backup  unaligned.h
jolt_os/jolt_gui/: README.md  confirmation.c  confirmation.h  jolt_gui.c  jolt_gui.h  jolt_gui.mk  jolt_gui_bignum.c  jolt_gui_bignum.h  jolt_gui_debug.c  jolt_gui_debug.h  jolt_gui_digit_entry.c  jolt_gui_digit_entry.h  jolt_gui_entry.c  jolt_gui_entry.h  jolt_gui_err.c  jolt_gui_err.h  jolt_gui_first_boot.c  jolt_gui_first_boot.h  jolt_gui_gap_cb.c  jolt_gui_indev.c  jolt_gui_indev.h  jolt_gui_loading.c  jolt_gui_loading.h  jolt_gui_menu.c  jolt_gui_menu.h  jolt_gui_pin.c  jolt_gui_pin.h  jolt_gui_qr.c  jolt_gui_qr.h  jolt_gui_scroll.c  jolt_gui_scroll.h  jolt_gui_slider.c  jolt_gui_slider.h  jolt_gui_statusbar.c  jolt_gui_statusbar.h  jolt_gui_stretch.c  jolt_gui_stretch.h  jolt_gui_symbols.h  jolt_gui_text.c  jolt_gui_text.h  (+12 more)
jolt_os/jolt_gui/custom_fonts/: DejaVuSans09BoldNoBearing.sfd  DejaVuSans09NoBearing.sfd  ModeNine.sfd  README.md  bus_6.c  crox3hb.c  crox3hb_numeric.c  custom_fonts.mk  custom_symbols.sfd  dejavu_16.c  dejavu_32.c  dejavu_40_numeric.c  f_6x10.c  font_usage.txt  jolt_gui_symbols.c  jolt_symbols.c  jolt_symbols.sfd  modenine_20.c  modenine_40.c  orange_kid.c  pixelmix.c  pixelmix.sfd  pixelmix_7.c  pixelmix_7_latin_sup.c  scientifica_11.c  shylock_10.c  synchronizer7.c  terminus_9.c  unifont.c  unscii_8.c  unscii_8.sfd
jolt_os/jolt_gui/menus/: home.c  home.h  settings.c  settings.h
jolt_os/jolt_gui/menus/settings/: bluetooth.c  bluetooth_pair.c  bluetooth_pair.h  bluetooth_temp_pair.c  bluetooth_unbond.c  factory_reset.c  language.c  led_brightness.c  screen_brightness.c  settings.c  settings.h  storage.c  storage_details.c  submenus.h  wifi.c  wifi_details.c
jolt_os/lang/: README.md  english.c  lang.c  lang.h  spanish.c
jolt_os/syscore/: bg.c  bg.h  cli.c  cli.h  cli_ble.c  cli_ble.h  cli_helpers.c  cli_helpers.h  cli_sub.c  cli_sub.h  cli_uart.c  cli_uart.h  console.c  console_helpers.c  console_helpers.h  decompress.c  decompress.h  encoding.h  ext_storage.c  ext_storage.h  filesystem.c  filesystem.h  https.c  https.h  launcher.c  launcher.h  mnemonic_restore.c  noise.c  noise.h  ota.c  ota.h  partition.c  partition.h  set_wifi_credentials.c  set_wifi_credentials.h  ymodem.c  ymodem.h
jolt_os/syscore/cmd/: jolt_cmd_about.c  jolt_cmd_app_key.c  jolt_cmd_bt_whitelist.c  jolt_cmd_cat.c  jolt_cmd_consume_mem.c  jolt_cmd_display.c  jolt_cmd_download.c  jolt_cmd_factory_reset.c  jolt_cmd_free.c  jolt_cmd_jolt_cast_update.c  jolt_cmd_long.c  jolt_cmd_ls.c  jolt_cmd_lv_obj.c  jolt_cmd_mnemonic_restore.c  jolt_cmd_mv.c  jolt_cmd_pmtop.c  jolt_cmd_reboot.c  jolt_cmd_rm.c  jolt_cmd_rng.c  jolt_cmd_run.c  jolt_cmd_task_status.c  jolt_cmd_top.c  jolt_cmd_touch.c  jolt_cmd_unlock.c  jolt_cmd_upload.c  jolt_cmd_upload_firmware.c  jolt_cmd_wifi_update.c  jolt_cmds.h  upload_firmware.c  upload_firmware.h
jolt_os/syscore/encoding/: encoding.c  jrle.c  rle.c  zlib.c
jolt_os/syscore/ymodem/: ymodem_common.c  ymodem_common.h  ymodem_receive.c  ymodem_send.c
jolt_os/test/: CMakeLists.txt  README.md  component.mk  setup.c  test_aes132.c  test_helpers.c  test_vault.c
jolt_os/test/app_cmd/: test_contacts.c
jolt_os/test/crypto/: generate_ecdsa_secp256k1_test_vector.py  test_crypto.c
jolt_os/test/crypto/algorithms/: test_ecdsa.c  test_ecdsa_secp256k1.c
jolt_os/test/hal/storage/: test_atecc608a.c
jolt_os/test/hash/: test_hash.c
jolt_os/test/hash/algorithms/: test_blake2b.c  test_ripemd160.c  test_sha256.c  test_sha512.c
jolt_os/test/jolt_gui/: test_jolt_gui_qr.c
jolt_os/test/nanopb/: simple.proto  test_nanopb.c
jolt_os/test/syscore/: test_launcher.c
jolt_os/test/syscore/encoding/: test_encoding.c  test_jrle.c  test_rle.c  test_zlib.c
(+344 files in other folders)
