idf_component_register(
        SRCS
            "./main.c"
            "./jolt_helpers.c"
            "./vault.c"
            "./json_config.c"
            "app_cmd/contacts.c"
            "crypto/crypto_registry.c"
            "crypto/crypto.c"
            "crypto/algorithms/ed25519.c"
            "crypto/algorithms/ecdsa_secp256k1.c"
            "hal/display.c"
            "hal/led.c"
            "hal/hw_monitor.c"
            "hal/i2c.c"
            "hal/lv_drivers/display/ST7565.c"
            "hal/lv_drivers/display/SSD1306.c"
            "hal/lv_drivers/display/R61581.c"
            "hal/lv_drivers/display/fbdev.c"
            "hal/lv_drivers/display/ILI9341.c"
            "hal/lv_drivers/display/monitor.c"
            "hal/lv_drivers/display/SSD1963.c"
            "hal/radio/spp_recv_buf.c"
            "hal/radio/bluetooth_state.c"
            "hal/radio/bluetooth.c"
            "hal/radio/bluetooth_cfg.c"
            "hal/radio/wifi.c"
            "hal/radio/bluetooth_gatts_profile_a.c"
            "hal/storage/storage_atecc608a.c"
            "hal/storage/storage_internal.c"
            "hal/storage/storage_ataes132a.c"
            "hal/storage/storage.c"
            "hal/storage/aes132_library/aes132_conf.c"
            "hal/storage/aes132_library/aes132_comm.c"
            "hal/storage/aes132_library/aes132_mac.c"
            "hal/storage/aes132_library/i2c_phys.c"
            "hal/storage/aes132_library/aes132_cmd.c"
            "hal/storage/aes132_library/aes132_jolt.c"
            "hal/storage/aes132_library/aes132_comm_marshaling.c"
            "hal/storage/aes132_library/aes132_i2c.c"
            "hal/storage/atca/atecc608a.c"
            "hash/hash_registry.c"
            "hash/hash.c"
            "hash/algorithms/sha512.c"
            "hash/algorithms/blake2b.c"
            "hash/algorithms/ripemd160.c"
            "hash/algorithms/sha256.c"
            "jelf_loader/src/loader.c"
            "jelf_loader/src/unaligned.c"
            "jolt_gui/jolt_gui_qr.c"
            "jolt_gui/jolt_gui.c"
            "jolt_gui/jolt_gui_text.c"
            "jolt_gui/jolt_gui_loading.c"
            "jolt_gui/jolt_gui_first_boot.c"
            "jolt_gui/jolt_gui_menu.c"
            "jolt_gui/jolt_gui_statusbar.c"
            "jolt_gui/jolt_gui_scroll.c"
            "jolt_gui/jolt_gui_yesno.c"
            "jolt_gui/jolt_gui_err.c"
            "jolt_gui/jolt_gui_debug.c"
            "jolt_gui/jolt_gui_theme.c"
            "jolt_gui/jolt_gui_bignum.c"
            "jolt_gui/jolt_gui_gap_cb.c"
            "jolt_gui/test_screens.c"
            "jolt_gui/jolt_gui_indev.c"
            "jolt_gui/jolt_gui_slider.c"
            "jolt_gui/jolt_gui_digit_entry.c"
            "jolt_gui/custom_fonts/unscii_8.c"
            "jolt_gui/custom_fonts/pixelmix.c"
            "jolt_gui/custom_fonts/modenine_20.c"
            "jolt_gui/custom_fonts/modenine_40.c"
            "jolt_gui/custom_fonts/jolt_symbols.c"
            "jolt_gui/menus/home.c"
            "jolt_gui/menus/settings/settings.c"
            "jolt_gui/menus/settings/screen_brightness.c"
            "jolt_gui/menus/settings/language.c"
            "jolt_gui/menus/settings/bluetooth.c"
            "jolt_gui/menus/settings/factory_reset.c"
            "jolt_gui/menus/settings/bluetooth_unbond.c"
            "jolt_gui/menus/settings/led_brightness.c"
            "jolt_gui/menus/settings/wifi_details.c"
            "jolt_gui/menus/settings/bluetooth_pair.c"
            "jolt_gui/menus/settings/wifi.c"
            "jolt_gui/menus/settings/storage_details.c"
            "jolt_gui/menus/settings/storage.c"
            "lang/spanish.c"
            "lang/lang.c"
            "lang/english.c"
            "syscore/cli_sub.c"
            "syscore/noise.c"
            "syscore/filesystem.c"
            "syscore/set_wifi_credentials.c"
            "syscore/partition.c"
            "syscore/bg.c"
            "syscore/cli_helpers.c"
            "syscore/ext_storage.c"
            "syscore/cli.c"
            "syscore/launcher.c"
            "syscore/cli_uart.c"
            "syscore/ota.c"
            "syscore/decompress.c"
            "syscore/https.c"
            "syscore/cli_ble.c"
            "syscore/cmd/jolt_cmd_bt_whitelist.c"
            "syscore/cmd/jolt_cmd_rm.c"
            "syscore/cmd/jolt_cmd_pmtop.c"
            "syscore/cmd/jolt_cmd_mnemonic_restore.c"
            "syscore/cmd/jolt_cmd_factory_reset.c"
            "syscore/cmd/jolt_cmd_mv.c"
            "syscore/cmd/jolt_cmd_consume_mem.c"
            "syscore/cmd/jolt_cmd_display.c"
            "syscore/cmd/jolt_cmd_long.c"
            "syscore/cmd/jolt_cmd_rng.c"
            "syscore/cmd/jolt_cmd_touch.c"
            "syscore/cmd/jolt_cmd_about.c"
            "syscore/cmd/jolt_cmd_app_key.c"
            "syscore/cmd/jolt_cmd_wifi_update.c"
            "syscore/cmd/jolt_cmd_jolt_cast_update.c"
            "syscore/cmd/jolt_cmd_ls.c"
            "syscore/cmd/jolt_cmd_top.c"
            "syscore/cmd/jolt_cmd_download.c"
            "syscore/cmd/jolt_cmd_upload_firmware.c"
            "syscore/cmd/jolt_cmd_unlock.c"
            "syscore/cmd/jolt_cmd_cat.c"
            "syscore/cmd/jolt_cmd_upload.c"
            "syscore/cmd/jolt_cmd_reboot.c"
            "syscore/cmd/jolt_cmd_lv_obj.c"
            "syscore/cmd/jolt_cmd_free.c"
            "syscore/cmd/jolt_cmd_task_status.c"
            "syscore/encoding/jrle.c"
            "syscore/encoding/zlib.c"
            "syscore/encoding/rle.c"
            "syscore/encoding/encoding.c"
            "syscore/ymodem/ymodem_send.c"
            "syscore/ymodem/ymodem_common.c"
            "syscore/ymodem/ymodem_receive.c"
        INCLUDE_DIRS
            "."
            "crypto"
            "hal/storage/aes132_library"
            "hal/storage/atca"
            "hash"
            "jelf_loader/include"
            "${CMAKE_CURRENT_BINARY_DIR}"
        REQUIRES
            "QRCode"
            "app_trace"
            "app_update"
            "bip-mnemonic"
            "bt"
            "console"
            "cryptoauthlib"
            "easy_input"
            "esp_adc_cal"
            "esp_full_miniz"
            "esp_hdiffz"
            "esp_http_client"
            "esp_littlefs"
            "fatfs"
            "jolt-crypto"
            "jolt-types"
            "json"
            "libsodium"
            "libsodium"
            "lvgl"
            "mbedtls"
            "nanopb"
            "nvs_flash"
            "spiffs"
            "test_utils"
            "unity"
            "wear_levelling"
            "wpa_supplicant"
)

#######################
# Generate jolt_lib.h #
#######################
add_custom_command(OUTPUT jolt_lib.h
     COMMAND
        python3 ${COMPONENT_DIR}/../elf2jelf/elf2jelf.py --export_only --jolt_lib jolt_lib.h
     DEPENDS
         ${COMPONENT_DIR}/../elf2jelf/export_list.txt
         ${COMPONENT_DIR}/../elf2jelf/jolt_lib_template.h
         ${COMPONENT_DIR}/../elf2jelf/elf2jelf.py
         ${COMPONENT_DIR}/../elf2jelf/common_structs.py
     VERBATIM)

add_custom_target(jolt_lib DEPENDS jolt_lib.h)
add_dependencies(${COMPONENT_LIB} jolt_lib)

set_property(DIRECTORY "${COMPONENT_DIR}" APPEND PROPERTY
     ADDITIONAL_MAKE_CLEAN_FILES jolt_lib.h)
